[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["Paulo Hernane <paulohernane10@gmail.com>"]
readme = "README.md"
packages = [{include = "tic_tac_toe"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.3"
asyncio = "^3.4.3"
websockets = "^10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
